<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/Fname"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="55dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/Fname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Lname"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="23dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/Lname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Fname" />

        <EditText
            android:id="@+id/Gender"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="23dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/Gender"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Lname" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="279dp"
            android:layout_height="140dp"
            android:calendarViewShown="false"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:datePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Gender" />


        <EditText
            android:id="@+id/Signup_Email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="23dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker1"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="23dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Signup_Email" />

        <Button
            android:id="@+id/Signup_btnsignup"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="152dp"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="23dp"
            android:text="@string/signup_txt_btn"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
